<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.poynt.converge.ConfigurationTestActivity">

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:id="@+id/chargeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/chargeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Charge $10.00"
            android:visibility="visible" />

        <Button
            android:id="@+id/collectPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Collect Phone"
            android:visibility="visible" />
        <Button
            android:id="@+id/collectRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Collect Rating"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sessionKeyLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chargeLayout"
        android:orientation="vertical"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Encrypted SessionKey" />

            <EditText
                android:id="@+id/sessionKey"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:text="25E25463F49BB4646AE5E82EFDB380F725E25463F49BB464" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SessionKey MAC" />

            <EditText
                android:id="@+id/sessionKeyMac"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="4C17251FB010E62A" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SessionKey ID" />

            <EditText
                android:id="@+id/sessionKeyId"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="REDE_WK" />
        </LinearLayout>

        <Button
            android:id="@+id/loadSessionKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Load Session Key" />
    </LinearLayout>

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/sessionKeyLayout"
        android:background="#000000" />

    <LinearLayout
        android:id="@+id/encryptionLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator1"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data to Encrypt" />

            <EditText
                android:id="@+id/dataToEncrypt"
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:text="08002020010000C10010910000104838019752464354524330393030303030303030303030303030310407540108050252464354524330398405454D5630308502210F00000700090000000000000002000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000522000070000000000000000000000000000003939393904040000100000000000000149575039303130303033430000000000000000204500000000000000000000000000000000000000000000000000000000000000000000000000000000020003000000000000000158543336324653303030313634202020202020202020202020202020000000000000000000000000000001883136495750393031303030334320303030309200342020202020202020202020202020202020503631534854333632465330303031363493001920202020202020202020202020202020202058950082000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000006202020202031FFFFFFFFFFFF" />
        </LinearLayout>

        <Button
            android:id="@+id/encryptData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Encrypt DUKPT Data" />
    </LinearLayout>

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/encryptionLayout"
        android:background="#000000" />


    <LinearLayout
        android:id="@+id/configInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/getTerminalConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GET Terminal Config" />

        <Button
            android:id="@+id/getAIDConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Get EMV AID Config" />

        <Button
            android:id="@+id/collectCVV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Collect CVV" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/configInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/configInput"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deleteAllAIDs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete AIDs" />

        <Button
            android:id="@+id/deleteAllCAPublicKeys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete Public Keys" />

        <Button
            android:id="@+id/deleteAllEMVExceptionList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete Exception List" />

        <Button
            android:id="@+id/deleteAllEMVRevocationList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete Revocation List" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/configInput3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/configInput2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/destroyConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Destroy Configs" />


        <Button
            android:id="@+id/setAIDConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set AID Config" />

        <Button
            android:id="@+id/setEMVCAPublicKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set EMV CA Public Key" />
    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/configInput3"
        android:background="#000000" />

    <LinearLayout
        android:id="@+id/configInput4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:orientation="horizontal">

        <Button
            android:id="@+id/factory_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/factory_reset" />

        <Button
            android:id="@+id/load_live_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_live_config" />

        <Button
            android:id="@+id/set_rtc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_rtc" />

        <Button
            android:id="@+id/setAIDs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_aids" />

    </LinearLayout>

    <View
        android:id="@+id/separator3"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/configInput4"
        android:background="#000000" />


    <ScrollView
        android:id="@+id/demoScroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator3"
        android:padding="5dp">

        <TextView
            android:id="@+id/consoleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:typeface="monospace" />
    </ScrollView>
</RelativeLayout>
